jumbotron mobile fix

--- a/style2.css
+++ b/style2.css
@@ -253,6 +253,11 @@ footer {
     }
 
     .jumbotron {
+        
+    }
+    .jumbotron {
+        height: 50vh;
+        line-height: 50vh;
         border-bottom: 4px solid #246;
     }
 
